--- a/TutorialAndDevGuide/Tutorial/Grammar/BNF.tex
+++ b/TutorialAndDevGuide/Tutorial/Grammar/BNF.tex
@@ -93,9 +93,9 @@ $$ \begin{array}{lcl}
     & | & \texttt{Just } [(\langle valueList \rangle)_,^*]  \\
 
  & & \\
-\langle argList \rangle & ::= &  [(\mbox{\texttt{Arg }} \langle stream \rangle)_,^*]  \\
+\langle argList \rangle & ::= &  [(\mbox{\texttt{arg }} \langle stream \rangle)_,^*]  \\
     & | & \texttt{[]} \\
-    & | & (\texttt{Arg } \langle stream \rangle)\texttt{:} \langle argList \rangle \\
+    & | & (\texttt{arg } \langle stream \rangle)\texttt{:} \langle argList \rangle \\
  & & \\
 \end{array} $$
 $$ \begin{array}{lcl}
