--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -32,8 +32,8 @@ Do not forget:
 
 \subsection{Specification}
 
-{ \footnotesize
-\begin{lstlisting}[language=Haskell]
+
+\begin{lstlisting}[language=Copilot]
 
 module WCV where
 
@@ -243,7 +243,6 @@ arithSat :: Proof Existential
 arithSat = onlySat      def { nraNLSat = True, debug = False }
 
 \end{lstlisting}
-}
 
 \subsection{Compiling process}
 
