--- a/TutorialAndDevGuide/Tutorial/MajVoteExample.tex
+++ b/TutorialAndDevGuide/Tutorial/MajVoteExample.tex
@@ -6,7 +6,7 @@ on top of Copilot by implementing an algorithm for solving the voting problem
 in Copilot.
 
 \begin{figure*}[!htb]
-\begin{lstlisting}[frame=none]
+\begin{lstlisting}[language = Copilot, frame = none]
 majorityPure :: Eq a => [a] -> a
 majorityPure []     = error "majorityPure: empty list!"
 majorityPure (x:xs) = majorityPure' xs x 1
@@ -24,7 +24,7 @@ majorityPure' (x:xs) can cnt =
 \end{figure*}
 
 \begin{figure*}[!htb]
-\begin{lstlisting}[frame=none]
+\begin{lstlisting}[language = Copilot, frame = none]
 aMajorityPure :: Eq a => [a] -> a -> Bool
 aMajorityPure xs can = aMajorityPure' 0 xs can > length xs `div` 2
 
@@ -58,7 +58,7 @@ E.g. applying {\tt majorityPure} on the string {\tt AAACCBBCCCBCC} yields {\tt
   C}, which {\tt aMajorityPure} can confirm is in fact a majority.
 
 \begin{figure*}[!htb]
-\begin{lstlisting}[frame=none]
+\begin{lstlisting}[language = Copilot, frame = none]
 majority :: (Eq a, Typed a) => [Stream a] -> Stream a
 majority []     = error "majority: empty list!"
 majority (x:xs) = majority' xs x 1
@@ -77,7 +77,7 @@ majority' (x:xs) can cnt =
 \end{figure*}
 
 \begin{figure*}[!htb]
-\begin{lstlisting}[frame=none]
+\begin{lstlisting}[language = Copilot, frame = none]
 aMajority :: (Eq a, Typed a) => [Stream a] -> Stream a -> Stream Bool
 aMajority xs can = aMajority' 0 xs can > (fromIntegral (length xs) `div` 2)
 
